[package]
name = "syslog-utils"
version = "0.1.0"
edition = "2021"
default-run = "syslog-client"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
fasyslog = { git = "https://github.com/koenw/fasyslog.git", rev = "805e4497b5bdc87acf570c69765363215946289e", features = ["native-tls"] }
log = { version = "0.4.32", features = ["kv", "kv_std"] }
native-tls = { version = "0.2.18", features = ["vendored"] }
openssl = { version = "0.10.81", features = ["vendored"] }
pretty_env_logger = "0.5.0"
structopt = { version = "0.3.26", features = ["color", "doc", "wrap_help"] }
syslog_loose = "0.23.0"

[features]
vendored = [ "native-tls/vendored", "openssl/vendored" ]
default = [ "vendored" ]
